[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "streamqueue"
version = "1.8.0"
requires-python = ">=3.10"
description = "A lightweight message queue library for Python"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.4", "black>=24.0"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "UP"]
